# OLALLMAgent1

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent/: executor_client.py  loop.py  planner.py  tools_schema.json  tools_schema.py
apps/ora-mobile/: App.tsx  package.json
apps/ora-mobile/screens/: Chat.tsx
backend/: metrics.py  model_router.py  server.py
backend/backends/: llamacpp_client.py  ollama_client.py  vllm_client.py
browser/: executor_rpc.py  playwright_helper.py
config/: model.yaml
rag/: index.py  packer.py  retriever.py
scripts/: launch_120b.ps1  launch_20b.ps1  start.ps1  start.sh  vm_quickcreate.ps1
tests/: test_rag_index.py
tools/: bench_client.py  curl_spec.json  verify_function_call.ps1
