[tool.poetry]
name = "olallmagent1"
version = "0.1.0"
description = "Local LLM agent stack"
authors = ["YoneRai12"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras=["standard"], version="^0.27.0"}
httpx = "^0.27.0"
pydantic = "^2.6.0"
tenacity = "^8.2.3"
playwright = "^1.42.0"
chroma-client = "^0.4.18"
sentence-transformers = "^2.6.0"
pyyaml = "^6.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
